# agent-demo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml
app/: main.py
app/api/: __init__.py  chat.py  skills.py  tools.py
backend/: .env.example  mcp.json  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  tools.py
backend/core/: config.py
backend/llm/: __init__.py  openai_service.py
backend/mcp_client/: client.py
backend/models/: __init__.py  chat.py  common.py
backend/session/: __init__.py  compaction.py  reasoning.py  token.py
backend/skills/: loader.py  manager.py  parser.py  watcher.py
backend/storage/skills/code-reviewer/: SKILL.md
backend/storage/skills/code-reviewer/scripts/: analyze.py
backend/tests/: test_api.py  test_compaction.py  test_token.py
core/: __init__.py  exceptions.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: Chat.tsx  Sidebar.tsx
frontend/src/types/: index.ts
mcp_client/: client.py
models/: mcp.py  skill.py
public/: index.html
skills/: __init__.py  loader.py  manager.py
